Updated with md file

--- a/access_global_local.Rmd
+++ b/access_global_local.Rmd
@@ -2,8 +2,11 @@
 title: "Accessibility - global vs local"
 author: "Michelle Stanton"
 date: "16/10/2020"
-output: html_document
+output: 
+  html_document:
+  keep_md: true
 ---
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
