--- a/access_global_local.Rmd
+++ b/access_global_local.Rmd
@@ -21,9 +21,20 @@ if(length(new.packages)) install.packages(new.packages)
 lapply(list.of.packages, library, character.only = TRUE)
 ```
 
+### Overview
+This document aims to allow for fast and reproducible construction of friction surfaces detailing travel time to health facilities.
+There are several key components which are necessary to construct a friction surface, with the aim of the surface detailing the cost to travel through gridded cells (pixels) of a known size. 
+The work outlined here is produced at a 30m x 30m spatial resolution, with the area/country of interest being defined by the user.
+The key steps of the below are:
+1. Downloading Normalised Difference Vegetation Index (NDVI) data for the area of interest using Google Earth Engine.
+  * The NDVI data will be used to determine cells for which the associated cost determines off-road travel. The premise for this is that dense vegetation (i.e. forests) will be more difficult to traverse than sparser vegetation (i.e. grass). Within this work, the biggest assumption is that **off-road travel will be achieved by foot/with a maximum speed** which is significantly slower than on-road travel.
+2. Downloading open-source road network data for the area of interest using www.openstreetmap.org.
+  * The network data will be used to determine cells for which the associated cost determines on-road travel. Roads available on OSM are categorised by their importance and usage and will be assigned different travel speeds (for example primary, secondary and tertiary roads).
+3. Assigning travel speeds to cells associated with NDVI data, and roads. This will include trawling/gathering information for speeds associated with certain roads (using GPS data? national speed limits?) and walking through different densities of vegetation. 
+4. Combining on-road and off-road data to produce one combined friction surface.
+5. Identifying the location of health facilities to use within a cost-distance analysis using the friction surface.
 
 ### NDVI data generation using rgee
-
 I keep having issues with the rgee package, so I suggest at some point we split this Rmd file so that we keep the GEE part in one file, and the cost-distance surface generation in another. Users can then either have the option of generating the NDVI in R, or using GEE directly, with the link to the code provided.
 
 ```{r}
@@ -44,7 +55,6 @@ We then initialise the rgee package. Once rgee is installed I believe you only n
 
 Note that you need to link to a Google account that has been given GEE access to be able to complete this stage. As we'll also be using Google Drive for downloading and uploading data, we also need to include 'drive=TRUE'. 
 
-
 ```{r, eval=F}
 ee_Initialize(drive = TRUE)
 ```
@@ -53,8 +63,10 @@ Now we can use R to run code on Google Earth Engine. Note that lots of examples 
 
 First, define the area of interest:
 
-```{r}
+Start by detailing limits for a bounding box (lat/long maximum and minimum values, in WGS84).
 
+```{r bblims}
+## max and minimum values for longitude and latitude
 bbxmin <- 33.2
 bbxmax <- 33.8
 bbymin <- -11.29
@@ -62,6 +74,7 @@ bbymax <- -10.73
 
 ```
 
+Then make this into a polygon by using xy combinations for each corner of the area of interest.
 ```{r, eval=F}
 aoi <- ee$Geometry$Polygon(coords=list(c(bbxmin, bbymax), c(bbxmax, bbymax), c(bbxmax, bbymin), c(bbxmin, bbymin)))
 ```
@@ -72,7 +85,6 @@ ls8 <- ee$ImageCollection("LANDSAT/LC08/C01/T1_RT_TOA")
 ```
 
 Filter the LS8 collection by area & then by collection date
-
 ```{r, eval=F}
 spatialFiltered <- ls8$filterBounds(aoi)
 temporalFiltered <- spatialFiltered$filterDate('2018-06-01', '2018-09-30')
@@ -136,12 +148,16 @@ writeRaster(med_ndvi,
 ```
 
 ### OpenStreetMap data
+To detail travel speeds within our area of interest, we are utilising an open source road network which is publicly compiled and hosted on:
+www.openstreetmap.org. 
 
-
-We can directly download OSM road data for our aoi. The bounding box is in the format c(xmin, ymin, xmax, ymax)
+We can directly download OSM road data for our aoi within R. The bounding box is in the format c(xmin, ymin, xmax, ymax), using the limits defined earlier in the script.
 
 ```{r osmdownload}
+## define bounding box
 aoi_bbox = c(bbxmin, bbymin, bbxmax, bbymax)
+
+## obtain road data
 q <- opq(bbox = aoi_bbox) %>%
     add_osm_feature(key = 'highway') %>%
     osmdata_sf()
@@ -153,6 +169,7 @@ ggplot(q$osm_lines)+geom_sf()
 We now want to assign speeds to the NDVI pixels plus the roads
 
 #### NDVI pixels by walking speed
+Need to document how these speeds are determined and how they vary by season and location for example.
 
 ```{r ndvireclass}
 # Temporarily read in NDVIexample from folder, which has been directly downloaded from GEE.
@@ -176,6 +193,8 @@ ndvi_assigned <- reclassify(ndvi_assigned, ndviwalk_mat)
 ```
 
 #### Roads by motor vehicle
+Again, need to document how these speeds are determined and how they may vary by season.
+We are currently using national speed limits as a maximum for primary and major roads.
 
 ```{r toraster, warning=FALSE}
 # Primary = 80kph, secondary = 80kph, 'Other' road speed = 20 kph
@@ -192,6 +211,8 @@ osm_road_raster <- fasterize(roads.poly, ndvi_assigned, "time_secs", fun = 'min'
 ```
 
 #### Merge NDVI and road rasters together
+The next step is to merge data for on-road and off-road trave to create one cohesive friction surface.
+In areas where "road" and "off-road" cells overlap, the road values will be retained as these will be associated with the lowest cost (quickest speed).
 
 ```{r genfriction}
 ## merge the NDVI and the OSM, retain the minimum value (this is the quickest cell crossing time)
@@ -204,7 +225,6 @@ writeRaster(friction_surface_motor,
 ```
 
 ### Calculate shortest paths
-
 First, add in health facility locations. Currently I'm reading in the facilities around Vwaza that have rHAT diagnostics, but will edit this to use afrimapr.
 
 ```{r, message=FALSE, results=FALSE}
